Optimize also game.js

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,7 +69,7 @@ jobs:
       - name: Optimize Javascript JumpGun/game.js
         uses: ./.github/actions/optimize-js
         with:
-          file: ./gh-pages/JumpGun/build.js
+          file: ./gh-pages/JumpGun/game.js
           transform: ./transform.js
 
 
